Исправлен алгоритм iterator_toArray и пересчитаны данные